about 30mins of work...

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 				<div class="border"></div>
 			</header>
 			<main>
-				<section class="players">
-					<section>
-						<div>
-							<img>
+				<section id="players">
+					<section class="player" id="player0">
+						<div class="playerMain">
+							<img src="icons/B.svg">
 							<span>Player 1</span>
-							<img>
+							<img class="blessing" src="icons/City_Blessing.png">
 							<span>40</span>
 						</div>
-						<div>
+						<div class="playerDropdown">
 							<ul>
 								<li><span>Energy</span><div></div></li>
 								<li><span>Poison</span><div></div></li>
